take brandname off meta

--- a/views/media.pug
+++ b/views/media.pug
@@ -468,7 +468,7 @@ block extra_footer_js
             })
 
             players[0].on('controlsshown', function () {
-              $('.plyr').css('cursor', 'pointer')
+              $('.plyr').css('cursor', 'inherit')
               console.log('hidden')
             })
 
