--- a/views/public/embed.pug
+++ b/views/public/embed.pug
@@ -8,7 +8,7 @@ html
         meta(name='csrf-token', content=_csrf)
         meta(name="description", content=meta.description)
 
-        meta(property='og:title', content=(meta.title || title) + ` - ${brandName}`)
+        meta(property='og:title', content=(meta.title || title))
         meta(property='og:image', content=meta.image)
         meta(property='og:description', content=meta.description)
         meta(property='og:video', content=meta.video)
@@ -16,7 +16,7 @@ html
 
         meta(name='twitter:card', content='summary')
         meta(name='twitter:site', content='@nodetube_org')
-        meta(name='twitter:title', content=(meta.title || title) + ` - ${brandName}`)
+        meta(name='twitter:title', content=(meta.title || title)`))
         meta(name='twitter:description', content=meta.description)
         meta(name='twitter:image', content=meta.image)
 
