add back mousemove

--- a/views/media.pug
+++ b/views/media.pug
@@ -489,9 +489,9 @@ block extra_footer_js
 
         /** WHEN USER MAKES A MOVEMENT, TURN OFF THEATRE MODE IF IT'S ON  **/
 
-        // $(this).on('keyup mousemove click scroll', function (e) {
+          $(this).on('keyup mousemove click scroll', function (e) {
 
-        $(this).on('keyup click scroll', function (e) {
+          // $(this).on('keyup click scroll', function (e) {
 
           secondsElapsedSinceLastMove = 0;
 
