--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,14 +10,14 @@ html
     meta(name="description", content=meta.description)
 
     // TODO: kind of want to remove the - Brandname, it doesn't look great
-    meta(property='og:title', content=(meta.title || title) + ` - ${brandName}`)
+    meta(property='og:title', content=(meta.title || title))
     meta(property='og:image', content=meta.image)
     meta(property='og:description', content=meta.description)
     meta(property='og:video', content=meta.video)
 
 
     meta(name='twitter:card', content='summary')
-    meta(name='twitter:title', content=(meta.title || title) + ` - ${brandName}`)
+    meta(name='twitter:title', content=(meta.title || title))
     meta(name='twitter:description', content=meta.description || "An open-source file hosting platform")
     meta(name='twitter:image', content=meta.image)
 
