--- a/views/layout.pug
+++ b/views/layout.pug
@@ -63,6 +63,7 @@ html
     //layout.pug
     include partials/header
 
+    // I feel like this is here and breaks if you move it
     include viewPartials/darkLightMode
 
     .container(style="max-width:100%;padding-left: 0px; padding-right: 0px;")
