--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -290,13 +290,18 @@ style.
         max-width:450px;
     }
 
+    @media (max-width: 767px) {
+        .plyr {
+            max-height: 40vh !important
+        }
+    }
+
     .plyr.plyr--video {
         resize: both;
 
         max-width: 97.5vw;
         max-height: 98vh;
 
-        width: 100vw;
         height: 82vh;
 
         /*width: 1409px;*/
