--- a/views/media.pug
+++ b/views/media.pug
@@ -9,9 +9,13 @@ block content
             margin-top: 30px;
         }
 
+        body header {
+            background-color: black !important;
+        }
+
 
     br
-    div.center-block.text-center.col-sm-12(style="overflow-x: hidden;margin-top:-51px;")
+    div.center-block.text-center.col-sm-12(style="overflow-x: hidden;margin-top:-51px;background-color:black;")
         if upload.status == 'processing'
 
             div(style="max-width:443px;margin:0 auto;")
@@ -418,156 +422,12 @@ block extra_footer_js
     });
 
   <!-- only do all the theatre stuff if it's a video, otherwise leave it as is-->
-  if upload.fileType == 'video'
-
-
-
-      script.
-        (function ($) {
-          $.fn.invisible = function () {
-            return this.each(function () {
-              $(this).css("visibility", "hidden");
-            });
-          };
-          $.fn.visible = function () {
-            return this.each(function () {
-              $(this).css("visibility", "visible");
-            });
-          };
-        }(jQuery));
-
-
-        $(document).ready(function () {
-
-          // focus on plyr so spacebar works
-          $('.plyr').focus()
-
-          function addStyleAttribute($element, styleAttribute) {
-            $element.attr('style', $element.attr('style') + '; ' + styleAttribute);
-          }
-
-          var theatreModeOn = false;
-          var idleTime = 0;
-          $(document).ready(function () {
-
-
-            /** THEATRE MODE FUNCTIONALITY **/
-            //Increment the idle time counter every minute.
-
-            var timerSeconds = 3;
-
-            var secondsElapsedSinceLastMove = 0;
-
-            // increment and check if it's over time
-            /** CHECK EVERY SECOND TO SEE IF IT'S TIME TO TURN ON THEATRE MODE  **/
-            setInterval(function(){
-              secondsElapsedSinceLastMove = secondsElapsedSinceLastMove + 1
-
-              const dontDoTheatreModeBelowThisFar = 270;
-
-              const currentYOffset = window.pageYOffset;
-
-              console.log(dontDoTheatreModeBelowThisFar, currentYOffset)
-
-              // don't do it above 270 px
-              const shouldDoIt = currentYOffset < dontDoTheatreModeBelowThisFar;
-
-
-              if(secondsElapsedSinceLastMove >= timerSeconds && !theatreModeOn && shouldDoIt){
-
-                console.log('TURNING ON THEATRE MODE!')
-
-                 window.scrollTo(0, 0);
-
-
-                // window.scrollTo(0, 67);
-
-                // $('.plyr').css('height','100vh')
-
-                addStyleAttribute($('body'), 'background-color: black !important');
-
-                players[0].on('controlshidden', function () {
-                  $('.plyr').css('cursor', 'none')
-                   $('body').css('cursor', 'none')
-
-                  console.log('hidden')
-                })
-
-                players[0].on('controlsshown', function () {
-                  $('.plyr').css('cursor', 'inherit')
-                  $('body').css('cursor', 'inherit')
-                  console.log('hidden')
-                })
+  if upload.fileType == 'video' && 1 == 2
+      include mediaPlayerPartials/threateModeFunctionality
 
 
 
 
-                $('header, footer, .non-player-content').invisible();
-
-                setTimeout(function(){
-                  theatreModeOn = true;
-                }, 600)
-
-
-
-              }
-            }, 1000); // 1 minute
-
-            /** WHEN USER MAKES A MOVEMENT, TURN OFF THEATRE MODE IF IT'S ON  **/
-
-              $(this).on('keyup mousemove click scroll', function (e) {
-
-              // $(this).on('keyup click scroll', function (e) {
-
-              secondsElapsedSinceLastMove = 0;
-
-              const plyrIsAParent = e.target.closest && e.target.closest(".plyr");
-
-              console.log(plyrIsAParent);
-
-              const isAClick = e.handleObj.type == 'click'
-
-
-              const mouseMoveWithTheatreOn = e.handleObj.type == 'mousemove' && theatreModeOn;
-
-              // if mousemove and theatre on, don't do anything
-              if(mouseMoveWithTheatreOn){
-                $('body').css('cursor', 'inherit')
-
-                
-                // turn off theatre mode
-
-              } else if (plyrIsAParent && isAClick && theatreModeOn){
-                $('body').css('cursor', 'inherit')
-                // don't do anything special
-              } else {
-                // don't pop out on mousemove
-                // if(theatreModeOn) &&
-
-                // turn off theatre mode if it's on
-                if (theatreModeOn) {
-                  console.log('TURNING OFF THEATRE MODE');
-
-                  // $('.plyr').css('height', '82vh')
-
-                  $('body').css('cursor', 'inherit')
-
-                  addStyleAttribute($('body'), 'background-color: rgb(28,28,28)');
-
-                  // TODO: bug here
-                  // $('header').css('display', '')
-                  $('header, footer, .non-player-content').visible();
-                  theatreModeOn = false;
-                }
-              }
-            });
-
-          });
-
-
-
-        // Handler for .ready() called.
-        });
 
   //COMMENT FUNCTIONALITY CONTAINED HERE
   script(src="/js/media.js")
