--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -294,7 +294,13 @@ style.
         .plyr {
             max-height: 40vh !important
         }
+
+        .holder {
+            overflow: visible;
+        }
     }
+
+
 
     .plyr.plyr--video {
         resize: both;
