--- a/views/viewPartials/uploadDetails.pug
+++ b/views/viewPartials/uploadDetails.pug
@@ -20,7 +20,7 @@ div.underThing
 
 
     if upload.fileType == 'video'
-        i.fa.fa-lg.fa-video-camera(aria-hidden='true' style="margin:0 auto;text-align:center;display:inline;")
+        i.fa.fa-video-camera(aria-hidden='true' style="margin:0 auto;text-align:center;display:inline;")
     else if upload.fileType == 'audio'
         i.fa.fa-volume-up(aria-hidden='true' style="margin:0 auto;text-align:center;display:inline;")
     else if upload.fileType == 'image'
